flowlog-build/tests/errors/parser/ground_fact_not_const.dl
.decl k(x: number)
k(E).
